@@ -1,3 +1,9 @@
+2017-11-01 Riccardo Mottola <rm@gnu.org>
+
+	* DBSFTypeWrappers.h
+        * DBSFTypeWrappers.m
+        Implement missing class methods.
+
 2017-10-31 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m
